# Steam-MLOPS

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
Notebooks/: EDA.ipynb  ETL_games.ipynb  ETL_items.ipynb  ETL_reviews.ipynb  Feature_engineering.ipynb  prueba-funciones.ipynb
api/: index.html  main.py
dataset/: Diccionario de Datos STEAM.xlsx  df_endpoints3_4_5.parquet  df_similitud_items.parquet  matrix.parquet  steam_games.parquet
web_server/: funcionesAPI.py  index.html  main.py
