[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "*"
scipy = "*"
pandas = "*"
numpy = "*"
jupyter = "*"
matplotlib = "*"
seaborn = "*"
fastapi = "*"
pyarrow = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

